k8s/nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: ingress-nginx-nodeport
  namespace: ingress-nginx
spec:
  type: NodePort
  selector:
    app.kubernetes.io/name: ingress-nginx
    app.kubernetes.io/component: controller
  ports:
    - name: http
      port: 80
      targetPort: 80
      nodePort: 31583   # You can pick any port in 30000-32767
    - name: https
      port: 443
      targetPort: 443
      nodePort: 32716
