k8s/sql-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sqlserver
  namespace: angular-micro
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sqlserver
  template:
    metadata:
      labels:
        app: sqlserver
    spec:
      securityContext:
        runAsUser: 0
      containers:
        - name: sqlserver
          image: mcr.microsoft.com/mssql/server:2022-latest
          ports:
            - containerPort: 1433
          volumeMounts:
            - name: sql-data
              mountPath: /var/opt/mssql
      volumes:
        - name: sql-data
          persistentVolumeClaim:
            claimName: sqlserver-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: sqlserver
  namespace: angular-micro
spec:
  type: ClusterIP
  selector:
    app: sqlserver
  ports:
    - port: 1433
      targetPort: 1433
